--- a/EventTracker/Views/User/Login.cshtml
+++ b/EventTracker/Views/User/Login.cshtml
@@ -1,10 +1,7 @@
-﻿@{
-    Layout = "_Layout_LoggedOut";
-}
-
-@model EventTracker.Models.User
+﻿@model EventTracker.Models.User
 
 @{
+    Layout = "_Layout_LoggedOut";
     ViewData["Title"] = "Login Page";
 }
 
