--- a/EventTracker/Views/Shared/_Layout_LoggedOut.cshtml
+++ b/EventTracker/Views/Shared/_Layout_LoggedOut.cshtml
@@ -35,7 +35,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2020 - EventTracker - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            &copy; 2020 - EventTracker
         </div>
     </footer>
 
